# docdraft

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  config.example.yaml  pyproject.toml
examples/: advanced.py  basic.py
src/: __main__.py  core.py  health.py  utils.py
src/docdraft/: __init__.py  cli.py  models.py  report.py
src/docdraft/generator/: __init__.py  builder.py  customizer.py  formatter.py
src/docdraft/templates/: __init__.py  employment.py  freelance.py  nda.py  privacy.py  service.py  terms.py
tests/: test_benchmark.py  test_cli.py  test_core.py  test_generator.py  test_integration.py  test_models.py  test_report.py  test_templates.py
